fix: correct off centered images

--- a/style.scss
+++ b/style.scss
@@ -430,7 +430,8 @@ hr {
     width: 240px;
     height: 240px;
     object-fit: cover;
-    object-position: 25% 25%;
+    object-position: center;
+    background-position: center center;
 }
 
 
